# ProcessComm

./: .gitignore  README.md  journal.md
PythonProcess/: .pre-commit-config.yaml  echo_pb2.py  echo_pb2_grpc.py  process_proto.sh  project.code-workspace  pyproject.toml
PythonProcess/echo/v1/: echo_pb2.py  echo_pb2.pyi  echo_pb2_grpc.py
PythonProcess/logger/v1/: logger_pb2.py  logger_pb2.pyi  logger_pb2_grpc.py
PythonProcess/src/: __main__.py  python_process.py  server.py
PythonProcess/src/server/: server.py
PythonProcess/src/services/: __init__.py  echo.py  loggerplugin.py
QtProcess/: CMakeLists.txt  QtProcess.code-workspace  echoclient.cpp  echoclient.h  grpcreplyguard.h  grpcunarycall.h  loggerclient.cpp  loggerclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginlogresult.h  pluginversion.h
proto/: echo.proto
proto/echo/v1/: echo.proto
proto/logger/v1/: logger.proto
